Fix gap home

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -11,7 +11,6 @@ body {
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-
 p {
   line-height: 1.75;
 }
@@ -107,7 +106,6 @@ img::-moz-selection {
 .aboutus {
   padding: 30px;
   margin: 20px;
-
 }
 .btn-xl {
   font-size: 18px;
@@ -195,8 +193,6 @@ img::-moz-selection {
 
 .filterProd {
   width: 60em;
-
-
 }
 
 .priceSlider {
@@ -706,7 +702,7 @@ ul.social-buttons li a:hover {
 }
 
 .carousel {
-  height: 100%;
+  height: 40em;
 }
 
 .carousel-item {
